DM_BOOLEAN_CTOR: Method invokes inefficient Boolean constructor; use Boolean.valueOf(...) instead
Signed-off-by: Nick Sieger <nick@nicksieger.com>